
New features:
A.F....... [ZBX-1357] enabled Turkish translation to be displayed by default (zalex_ua)
A.F....... [ZBX-1357] updated Czech, English (United States), French, Italian, Japanese, Korean, Russian, Turkish translations; thanks to Zabbix translators (zalex_ua)
........S. [ZBX-12258] added bulk selections to improve performance in processing of escalations (Sergejs)

Bug fixes:
........S. [ZBX-12696] fixed trigger not being calculated for newly received item values if last one of those is unsupported value (vso)
..F....... [ZBX-12548] fixed notification sound not being played for message with timeout set to greater than minute (gcalenko)
...G...... [ZBX-12653] fixed heap corruption in Windows agent; thanks to Ronnie Kaech for the patch (abs)
A......... [ZBX-12660] fixed result of hostinterface.replacehostinterfaces method (Sasha)
..F....... [ZBX-12469] added new context for 'Second' string to be properly translated in maintenance period form (gcalenko)
.......PS. [ZBX-12493] fixed address and ports array size in zbx_init_ipmi_host() to match OpenIPMI internals (Andris, vso)
..F....... [ZBX-12623] fixed label macro resolving in maps (vjaceslavs)
..F.....S. [ZBX-11042] allowed libcurl to choose SMTP authentication mechanism other than PLAIN (gleb, vjaceslavs)
..F....... [ZBX-8997] fixed trigger expression validation test form (gcalenko, Sasha)
..F.I...S. [ZBX-12434] fixed housekeeping of problems and events for deleted items and triggers; added optional database patch to cleanup problems for deleted items and triggers (vso)
..F....... [ZBX-12646] fixed incorrect SQL query in availability reports (Sasha)
..F....... [ZBX-12545] fixed undefined index error on latest data page when host was deleted in another session (gcalenko)
..F....... [ZBX-12321] fixed removal of multiselect options using backspace button (miks)
..F....... [ZBX-12416] optimized data selection of user preferences stored in profiles (gcalenko)